objects/Appointments__c.object
<CustomObject>
    <description>Appointments</description>
    <label>Appointments</label>
    <nameField>
        <displayFormat>Apt-{000000000}</displayFormat>
        <label>Appointment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>appointment with Doctor</inlineHelpText>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Details__c</fullName>
        <label>Doctor Details</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Prescriber__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments (Doctor Details)</relationshipLabel>
        <relationshipName>Appointments1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_Time__c</fullName>
        <label>Appointment Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>